# stroopwafel

./: Cargo.toml  FUZZ.md  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
benches/: stroopwafel_bench.rs
examples/: basic_usage.rs  third_party_caveats.rs
fuzz/: Cargo.toml  run_all.sh
fuzz/fuzz_targets/: fuzz_caveats.rs  fuzz_predicates.rs  fuzz_serialization.rs  fuzz_verification.rs
src/: caveat.rs  crypto.rs  error.rs  lib.rs  predicate.rs  serialization.rs  stroopwafel.rs  verifier.rs
tests/: proptests.rs
