[package]
name = "stroopwafel"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.22.1"
color-eyre = "0.6.5"
hex = "0.4.3"
hmac = "0.12.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha3 = "0.10.8"
subtle = "2.6.1"
thiserror = "2.0.17"
tracing = "0.1.41"

[dev-dependencies]
rand = "0.9.2"
criterion = "0.5"

[[bench]]
name = "stroopwafel_bench"
harness = false
